--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -2,6 +2,7 @@ footer {
     color: #ffff;
     background-color: #171D1C;
     min-height: 15vh;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
