--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,11 @@
+@import url(./header.css);
+@import url(./footer.css);
+@import url(./landing.css);
+@import url(./main.css);
+
 * {
     margin: 0;
     padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-@import url(/CSS/header.css);
-@import url(/CSS/footer.css);
-@import url(/CSS/landing.css);
-@import url(/CSS/main.css);
