--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,3 +9,6 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body {
+    background-color: #F2EDE8;
+}
