--- a/CSS/landing.css
+++ b/CSS/landing.css
@@ -7,12 +7,18 @@
     padding: 0;
 }
 
+main {
+    width: 100vw;
+    height: 75vh;
+    display: flex;
+}
+
 .form {
     height: 50vh;
-    min-width: 30%;
+    width: 50vh;
     padding: 3%;
     background-color: #FF9E45;
-    margin: 7% 30%;
+    margin: auto;
     border-radius: 10%;
 }
 
@@ -29,18 +35,22 @@
 }
 
 .form-input {
-    margin: 2vh 0;
+    margin: 2vh;
     width: 40vh;
     height: 25px;
     padding: 10px;
     font-size: medium;
+    border: none;
+    border-radius: 1rem;
 }
 
 
 .form-login {
-    margin: 2vh 0;
-    padding: 10px;
+    margin: 1rem;
+    padding: 1rem;
     background-color: #FF8514;
+    border: none;
+    border-radius: 1rem;
     color: #ffff;
 }
 
